@@ -113,34 +113,37 @@ namespace MySql.Data.MySqlClient
         /// The specified key was not found.
         /// </summary>
 		KeyNotFound = 1032,
-	/*		ER_NOT_FORM_FILE 1033
-			ER_NOT_KEYFILE 1034
-			ER_OLD_KEYFILE 1035
-			ER_OPEN_AS_READONLY 1036
-			ER_OUTOFMEMORY 1037
-			ER_OUT_OF_SORTMEMORY 1038
-			ER_UNEXPECTED_EOF 1039
-			ER_CON_COUNT_ERROR 1040
-			ER_OUT_OF_RESOURCES 1041
-			ER_BAD_HOST_ERROR 1042
-			ER_HANDSHAKE_ERROR 1043
-			ER_DBACCESS_DENIED_ERROR 1044
-			ER_ACCESS_DENIED_ERROR 1045
-			ER_NO_DB_ERROR 1046
-			ER_UNKNOWN_COM_ERROR 1047
-			ER_BAD_NULL_ERROR 1048
-			ER_BAD_DB_ERROR 1049
-			ER_TABLE_EXISTS_ERROR 1050
-			ER_BAD_TABLE_ERROR 1051
-			ER_NON_UNIQ_ERROR 1052
-			ER_SERVER_SHUTDOWN 1053
-			ER_BAD_FIELD_ERROR 1054
-			ER_WRONG_FIELD_WITH_GROUP 1055
-			ER_WRONG_GROUP_FIELD 1056
-			ER_WRONG_SUM_SELECT 1057
-			ER_WRONG_VALUE_COUNT 1058
-			ER_TOO_LONG_IDENT 1059
-			ER_DUP_FIELDNAME 1060*/
+        /*		ER_NOT_FORM_FILE 1033
+                ER_NOT_KEYFILE 1034
+                ER_OLD_KEYFILE 1035
+                ER_OPEN_AS_READONLY 1036
+                ER_OUTOFMEMORY 1037
+                ER_OUT_OF_SORTMEMORY 1038
+                ER_UNEXPECTED_EOF 1039
+                ER_CON_COUNT_ERROR 1040
+                ER_OUT_OF_RESOURCES 1041*/
+            /// <summary>
+            /// Given when the connection is unable to successfully connect to host.
+            /// </summary>
+            UnableToConnectToHost = 1042,
+/*                ER_HANDSHAKE_ERROR 1043
+                ER_DBACCESS_DENIED_ERROR 1044
+                ER_ACCESS_DENIED_ERROR 1045
+                ER_NO_DB_ERROR 1046
+                ER_UNKNOWN_COM_ERROR 1047
+                ER_BAD_NULL_ERROR 1048
+                ER_BAD_DB_ERROR 1049
+                ER_TABLE_EXISTS_ERROR 1050
+                ER_BAD_TABLE_ERROR 1051
+                ER_NON_UNIQ_ERROR 1052
+                ER_SERVER_SHUTDOWN 1053
+                ER_BAD_FIELD_ERROR 1054
+                ER_WRONG_FIELD_WITH_GROUP 1055
+                ER_WRONG_GROUP_FIELD 1056
+                ER_WRONG_SUM_SELECT 1057
+                ER_WRONG_VALUE_COUNT 1058
+                ER_TOO_LONG_IDENT 1059
+                ER_DUP_FIELDNAME 1060*/
         /// <summary>
         /// Duplicate Key Name
         /// </summary>
