@@ -3,6 +3,7 @@ Version 5.0.4
   Bugs fixed
   ----------
   Bug #25443 ExecuteScalar() hangs when more than one bad result 
+  Bug #24802 Error Handling 
   
   Other changes
   -------------
